Fixed arrow styling on mobile displays

--- a/style.css
+++ b/style.css
@@ -451,4 +451,8 @@ i {
     display: flex;
     flex-direction: column;
   }
+
+  .arrow {
+    display: none;
+  }
 }
